# bazel_examples

./: .gitignore  BUILD.bazel  WORKSPACE
cover/: BUILD.bazel  foo.go  foo_test.go
cover/bar/: BUILD.bazel  bar.go  bar_test.go
coverrace/: BUILD.bazel
gazelle/: BUILD.bazel
gazelle/sqliteTest/: BUILD.bazel  main.go
gazelle/webp/: BUILD.bazel  main.go
gomock/: BUILD.bazel  client.go
imports/: BUILD.bazel  client.go  client_test.go
imports/testutils/: BUILD.bazel  utils.go
jsonnet/: BUILD.bazel  main.go
patches/: jsonnet-cpp.patch
permission/: BUILD.bazel  file.go  file_test.go  file_test.sh
proto/: BUILD.bazel
proto/infra/: BUILD.bazel  base.proto  host.proto
recompile/: BUILD.bazel  foo.go  foo_test.go
recompile/bar/: BUILD.bazel  bar.go
recompile/baz/: BUILD.bazel  baz.go
rules/: gomockery.bzl  heatpipe.bzl
socket/: BUILD.bazel  unix_test.go
sqlite/: BUILD.bazel
sqlite2/: BUILD.bazel  client.go
sqlite3/: BUILD.bazel  client.go
sqlite5/: BUILD.bazel  client.go
user_created/: BUILD.bazel
workingdir/: BUILD.bazel  workingdir_test.go
