load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["coverrace.go"],
    importpath = "github.com/linzhp/bazel_examples/coverrace",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["coverrace_test.go"],
    embed = [":go_default_library"],
    race = "on",
)
