load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/linzhp/bazel_examples/jsonnet",
    visibility = ["//visibility:private"],
    deps = ["@com_github_google_go_jsonnet//:go_default_library"],
)

go_binary(
    name = "jsonnet",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
