load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["file.go"],
    importpath = "github.com/linzhp/bazel_examples/permission",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["file_test.go"],
    embed = [":go_default_library"],
)

sh_test(
    name = "read_only_test",
    srcs = ["file_test.sh"],
)
