load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/linzhp/bazel_examples/sqlite",
    visibility = ["//visibility:public"],
    deps = ["@com_github_mattn_go_sqlite3//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
)
