load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["bar_test.go"],
    embed = [":go_default_library"],
    deps = ["//cover:go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["bar.go"],
    importpath = "github.com/linzhp/bazel_examples/cover/bar",
    visibility = ["//visibility:public"],
)
