load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/linzhp/bazel_examples/gazelle/sqliteTest",
    visibility = ["//visibility:private"],
    deps = ["@com_github_mattn_go_sqlite3//:go_default_library"],
)

go_binary(
    name = "sqliteTest",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
