load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "infrapb_go_proto",
    importpath = "proto/example.com/infra",
    proto = ":infrapb_proto",
    visibility = ["//visibility:public"],
    deps = ["//infra:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":infrapb_go_proto"],
    importpath = "proto/example.com/infra",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "infrapb_proto",
    srcs = [
        "base.proto",
        "host.proto",
    ],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
    deps = [
        "//infra:infra_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)
